src/test/ui/reachable/expr_if.stderr
error: unreachable expression
  --> $DIR/expr_if.rs:18:5
   |
18 |       if {return} {
   |  _____^ starting here...
19 | |         println!("Hello, world!");
20 | |     }
   | |_____^ ...ending here
   |
note: lint level defined here
  --> $DIR/expr_if.rs:14:9
   |
14 | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable statement
  --> $DIR/expr_if.rs:38:5
   |
38 |     println!("But I am.");
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate

error: aborting due to 2 previous errors

